@@ -1,5 +1,7 @@
-#include "ol_music_info.h"
+#include <string.h>
 #include <glib.h>
+#include "ol_music_info.h"
+#include "ol_debug.h"
 
 void
 ol_music_info_init (OlMusicInfo *info)
@@ -89,24 +91,66 @@ ol_music_info_copy (OlMusicInfo *dest, const OlMusicInfo *src)
 }
 
 void
-ol_music_info_finalize (OlMusicInfo *music_info)
-{
-  g_return_if_fail (music_info != NULL);
-  if (music_info->album != NULL)
-    g_free (music_info->album);
-  music_info->album = NULL;
-  if (music_info->title != NULL)
-    g_free (music_info->title);
-  music_info->title = NULL;
-  if (music_info->artist != NULL)
-    g_free (music_info->artist);
-  music_info->artist = NULL;
-}
-
-void
 ol_music_info_destroy (OlMusicInfo *music_info)
 {
   g_return_if_fail (music_info != NULL);
-  ol_music_info_finalize (music_info);
+  ol_music_info_clear (music_info);
   g_free (music_info);
+}
+
+int
+internal_snprint (void *buffer,
+                  size_t count,
+                  char *val)
+{
+  if (val == NULL)
+    val = "";
+  return snprintf (buffer, count, "%s\n", val);
+}
+
+int
+ol_music_info_serialize (OlMusicInfo *music_info,
+                         char *buffer,
+                         size_t count)
+{
+  ol_assert_ret (music_info != NULL, 0);
+  static const char empty_string[] = "";
+  int cnt = 0;
+  if (buffer == NULL)
+  {
+    if (music_info->title != NULL)
+      cnt += strlen (music_info->title);
+    cnt++;
+    if (music_info->artist != NULL)
+      cnt += strlen (music_info->artist);
+    cnt++;
+    if (music_info->album != NULL)
+      cnt += strlen (music_info->album);
+    cnt++;
+    static char tmpbuf[100];
+    cnt += snprintf (tmpbuf, 100, "%d\n", music_info->track_number);
+    if (music_info->uri != NULL)
+      cnt += strlen (music_info->uri);
+    cnt++;
+  }
+  else
+  {
+    cnt += internal_snprint (buffer + cnt,
+                             count - cnt,
+                             music_info->title);
+    cnt += internal_snprint (buffer + cnt,
+                             count - cnt,
+                             music_info->artist);
+    cnt += internal_snprint (buffer + cnt,
+                             count - cnt,
+                             music_info->album);
+    cnt += snprintf (buffer + cnt,
+                     count - cnt,
+                     "%d\n",
+                     music_info->track_number);
+    cnt += internal_snprint (buffer + cnt,
+                             count - cnt,
+                             music_info->uri);
+  }
+  return cnt;
 }
