@@ -1,23 +1,26 @@
 #include <stdio.h>
 #include <unistd.h>
+#include <sys/wait.h>
 #include <gtk/gtk.h>
 #include <ol_fork.h>
 
 #define BUFFER_SIZE 1024
 
 void
-callback (int fd, void *data)
+callback (void *ret_data,
+          size_t ret_size,
+          int status,
+          void *data)
 {
-  char buffer[BUFFER_SIZE];
   printf ("callback called\n");
-  ssize_t len = read (fd, buffer, BUFFER_SIZE);
-  buffer[len] = '\0';
-  printf ("received: %s\n", buffer);
-  printf ("expected: %s\n", (char *) data);
+  printf ("return status: %d\n", WEXITSTATUS (status));
+  printf ("received: %s\n", ret_data);
+  if (data != NULL)
+    printf ("data: %s\n", (char *) data);
 }
 
 void
-test1 ()
+test_normal ()
 {
   static const char msg[] = "Fork Message";
   printf ("Forking\n");
@@ -33,10 +36,58 @@ test1 ()
   }
 }
 
+void
+test_multiple_output ()
+{
+  printf ("Forking\n");
+  if (ol_fork (callback, NULL) == 0)
+  {
+    printf ("Before Sleep\n");
+    sleep (2);
+    printf ("After Sleep\n");
+    exit (0);
+  }
+  else
+  {
+    printf ("Fork succeeded\n");
+  }
+}
+
+void
+test_no_output ()
+{
+  printf ("Forking\n");
+  if (ol_fork (callback, NULL) == 0)
+  {
+    exit (0);
+  }
+  else
+  {
+    printf ("Fork succeeded\n");
+  }
+}
+
+void
+test_exit_status ()
+{
+  printf ("Forking\n");
+  if (ol_fork (callback, NULL) == 0)
+  {
+    exit (10);
+  }
+  else
+  {
+    printf ("Fork succeeded\n");
+  }
+}
+
 int
 main (int argc, char **argv)
 {
   GMainLoop *loop = g_main_loop_new (NULL, FALSE);
-  test1 ();
+  test_normal ();
+  test_multiple_output ();
+  test_no_output ();
+  test_exit_status ();
   g_main_loop_run (loop);
 }
