@@ -1,3 +1,7 @@
+2010-01-28  Tiger Soldier  <tigersoldi@gmail.com>
+
+	* src/ol_fork.c: ADD: Multi-process utility
+
 2010-01-23  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_path_pattern.c: Change the file name of the path pattern module from ``Path Manager'' to ``Path Pattern''
